--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,4 +1,16 @@
-
+@import 'leaflet/dist/leaflet.css';
 @import "~bootswatch/dist/minty/_variables.scss";
 @import '~bootstrap/scss/bootstrap';
 
+.map-container{
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+#map-picker{
+    position: absolute;
+    z-index: 100000000000000;
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+}
